# ndc-techtown-2022

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
examples/: callables.py  context_managers.py  dataclass.py  exceptions.py  f-string-disassembly.py  functools_lru_cache.py  functools_wraps.py  generators.py  generators_pytorch.py  nonlocal-disassembly.py  nonlocal.py
python_properly/cardgame/: card.py  deck.py
python_properly/datastructures/: descriptor.py
python_properly/list_comprehensions/: data.py  problems.py  table.py
python_properly/music_player/: README.md  audio_player.py  business_logic.py  dbconn.py  drm.py  song.py
python_properly/problems/: copy_vs_reference_part1.py  copy_vs_reference_part2.py  list_comprehensions.py  packing.py  timed_cache.py  timeit.py
python_properly/tabular_data/: __init__.py  __main__.py
techtown2022/cardgame/: deck.py  hand.py
techtown2022/problems/: concurrency.py  list_comprehensions.py  string_operations.py  timed_cache.py  timeit.py
techtown2022/tabular_data/: __init__.py  __main__.py
tests/: test_cardgame.py  test_tabular_data.py
tests/cardgame/: test_card.py  test_deck.py  test_hand.py
tests/datastructures/: test_descriptor.py
tests/list_comprehensions/: test_problems.py  test_table.py
tests/music_player/: test_business_logic.py  test_business_logic_mock.py  test_business_logic_mock_fixture.py
tests/problems/: test_concurrency.py  test_copy_vs_reference_part1.py  test_copy_vs_reference_part2.py  test_list_comprehensions.py  test_packing.py  test_string_operations.py  test_timed_cache.py  (+1 more)
