[tool.poetry]
name = "python-properly"
version = "0.1.0"
description = "A workshop in intermediate Python"
authors = [
	"Sebastian Roll <sebastianroll84@gmail.com>",
	"Peder Bergebakken Sundt <pbsds@hotmail.com>",
]

[tool.poetry.dependencies]
python = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
