[tool.poetry]
name = "python-proficiency"
version = "1.0.0"
description = "A workshop in intermediate to advanced Python"
authors = [
	"Sebastian Roll <sebastianroll84@gmail.com>",
	"Peder Bergebakken Sundt <pbsds@hotmail.com>",
]

[tool.poetry.dependencies]
python = "^3.6"
rich = ">=10"
more-itertools = ">=8"

[tool.poetry.dev-dependencies]
pytest = "^7"
ptpython = "^3"
objexplore = "^1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
